[tool.poetry]
name = "task4"
version = "0.1.0"
description = ""
authors = ["Mikhail_Cherevkov <mikhailcherevkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
numpy = "^1.26.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
